fix product image rendering/cropping

--- a/src/Foundation/Assets/scss/components/widgets/_product-tile.scss
+++ b/src/Foundation/Assets/scss/components/widgets/_product-tile.scss
@@ -174,7 +174,7 @@
     &__image {
         width: 100%;
         height: 100%;
-        object-fit: cover;
+        object-fit: contain;
 
         &:hover {
             cursor: pointer;
@@ -390,7 +390,7 @@
 
     &__image {
         height: 200px;
-        object-fit: cover;
+        object-fit: contain;
         margin-bottom: 5px;
     }
 
